k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incident-reporter
  labels:
    name: incident-reporter
